--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.kujtimhoxha</groupId>
+  <groupId>com.kujtimhoxha.plugins</groupId>
   <artifactId>todo-issue</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>0.1</version>
+  <version>0.1.SNAPSHOT</version>
   <build>
     <plugins>
       <plugin>
@@ -52,7 +52,7 @@
     <!--<plugins>-->
       <!--<plugin>-->
         <!--<groupId>com.qulice</groupId>-->
-        <!--<artifactId>qulice-maven-plugin</artifactId>-->
+        <!--<artifactId>qulice-plugins-plugin</artifactId>-->
         <!--<version>0.16</version>-->
         <!--<configuration>-->
           <!--<license>file:${basedir}/LICENSE.txt</license>-->
