--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,34 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.kujtimhoxha.plugins</groupId>
-  <artifactId>todo-issue</artifactId>
+  <artifactId>todo-issue-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>0.1.SNAPSHOT</version>
+  <version>0.1</version>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>oss.sonatype.org</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5</version>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <useReleaseProfile>false</useReleaseProfile>
+          <releaseProfiles>release</releaseProfiles>
+          <goals>deploy</goals>
         </configuration>
       </plugin>
     </plugins>
   </build>
+
   <name>todo-issue</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -48,23 +60,4 @@
       <version>4.4</version>
     </dependency>
   </dependencies>
-  <!--<build>-->
-    <!--<plugins>-->
-      <!--<plugin>-->
-        <!--<groupId>com.qulice</groupId>-->
-        <!--<artifactId>qulice-plugins-plugin</artifactId>-->
-        <!--<version>0.16</version>-->
-        <!--<configuration>-->
-          <!--<license>file:${basedir}/LICENSE.txt</license>-->
-        <!--</configuration>-->
-        <!--<executions>-->
-          <!--<execution>-->
-            <!--<goals>-->
-              <!--<goal>check</goal>-->
-            <!--</goals>-->
-          <!--</execution>-->
-        <!--</executions>-->
-      <!--</plugin>-->
-    <!--</plugins>-->
-  <!--</build>-->
 </project>
