--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.kujtimhoxha.plugins</groupId>
   <artifactId>todo-issue-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>0.1</version>
+  <version>0.1-SNAPSHOT</version>
   <distributionManagement>
     <snapshotRepository>
       <id>ossrh</id>
