--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <groupId>com.kujtimhoxha.plugins</groupId>
   <artifactId>todo-issue-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <scm>
     <url>https://github.com/kujtimiihoxha/todo-issue</url>
     <connection>scm:git:git:https://github.com/kujtimiihoxha/todo-issue.git</connection>
     <developerConnection>scm:git:https://github.com/kujtimiihoxha/todo-issue.git</developerConnection>
-    <tag>todo-issue-plugin-0.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <snapshotRepository>
