--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.kujtimhoxha.plugins</groupId>
   <artifactId>todo-issue-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>0.3</version>
+  <version>0.4</version>
   <name>todo-issue</name>
   <url>http://maven.apache.org</url>
   <parent>
@@ -97,6 +97,32 @@
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
       </plugin>
+    </plugins>
+    </build>
+  </profile>
+  <profile>
+    <id>dev</id>
+    <build>
+    <plugins>
+    <plugin>
+      <groupId>com.kujtimhoxha.plugins</groupId>
+      <artifactId>todo-issue-plugin</artifactId>
+      <version>0.4</version>
+        <configuration>
+            <source>/src</source>
+            <excludes>
+                <exclude>${basedir}/src/test</exclude>
+            </excludes>
+            <config>${basedir}/todo-issue.json</config>
+        </configuration>
+      <executions>
+        <execution>
+          <goals>
+            <goal>find</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
     </plugins>
     </build>
   </profile>
