--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.kujtimhoxha.plugins</groupId>
   <artifactId>todo-issue-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>0.5</version>
+  <version>0.5.1-SNAPSHOT</version>
   <name>todo-issue</name>
   <url>http://maven.apache.org</url>
   <parent>
@@ -107,7 +107,7 @@
     <plugin>
       <groupId>com.kujtimhoxha.plugins</groupId>
       <artifactId>todo-issue-plugin</artifactId>
-      <version>0.4</version>
+      <version>0.5.1-SNAPSHOT</version>
         <configuration>
             <source>/src</source>
             <excludes>
@@ -148,6 +148,11 @@
       <groupId>com.google.http-client</groupId>
       <artifactId>google-http-client-jackson2</artifactId>
       <version>1.21.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.16</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
