Changed paths in TodoFinderTest, it was failing in travis because the paths where only locally accessible.

--- a/src/test/resources/project-valid/pom.xml
+++ b/src/test/resources/project-valid/pom.xml
@@ -18,6 +18,9 @@
                     <sources>
                         <source>${basedir}/src</source>
                     </sources>
+                    <types>
+                        <type>.html</type>
+                    </types>
                 </configuration>
                 <executions>
                     <execution>
