--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.kujtimhoxha.plugins</groupId>
   <artifactId>todo-issue-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>todo-issue</name>
   <url>http://maven.apache.org</url>
 
@@ -47,30 +47,6 @@
   </build>
 
   <profiles>
-    <profile>
-      <id>todo</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.kujtimhoxha.plugins</groupId>
-            <artifactId>todo-issue-plugin</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <configuration>
-              <sources>
-                <source>/home/kujtimiihoxha/Projects/todo-issue/src/test/java/com/kujtimhoxha/plugins/todo/matcher/</source>
-              </sources>
-            </configuration>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>find</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <id>release</id>
       <build>
